--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php" : ">=5.4",
-        "knplabs/github-api": "^1.4",
+        "knplabs/github-api": "2.11.*",
         "league/flysystem": "^1.0"
     },
     "require-dev": {
